# Fall_Sensor

./: .gitignore  .gitmodules  AGENTS.md  README.md  git_push_retry.bat  requirements.txt
docs/: ERRORS_AND_FIXES.md  FIRMWARE_QUICKSTART.md  ML_README.md  QUANTIZATION_CALIBRATION.md  README.md  TFLITE_INFERENCE.md
docs/images/: Nylon_Waist_Pouch.jfif
firmware/: IMPLEMENTATION_SUMMARY.md  QUANTIZATION_CALIBRATION.md  QUICKSTART.md  README.md  TFLITE_INFERENCE_README.md  extract_quantization.py  platformio.ini
firmware/include/: fall_cnn_qat_int8_model.h  inference.h
firmware/src/: inference.cpp  main.cpp
firmware_idf/: CMakeLists.txt  sdkconfig  sdkconfig.defaults
firmware_idf/components/WebSockets_wrapper/: CMakeLists.txt
firmware_idf/main/: CMakeLists.txt  dashboard_html.h  fall_model.h  fall_sensor.cpp  inference.cpp  main.cpp  portal_html.h  wifi_stream.cpp  wifi_stream.h
hardware/: Alaafia_PCB_local.kicad_pcb  Alaafia_PCB_local.kicad_prl  Alaafia_PCB_local.kicad_pro  Alaafia_PCB_local.kicad_sch  fp-lib-table  sym-lib-table
hardware/One-Layer/: Alaafia_PCB_local.kicad_pcb  Alaafia_PCB_local.kicad_prl  Alaafia_PCB_local.kicad_pro  Alaafia_PCB_local.kicad_sch
hardware/Two-Layer/: Fall_Sensor.kicad_prl  Fall_Sensor.kicad_pro  Fall_Sensor.kicad_sch  sym-lib-table
tests/three_classes/: check_model.py  convert_to_header.py  fall_cnn_model.tflite  fall_cnn_qat_int8.tflite  inspect_dataset.py  list_ops.py  quantize_model.py  tflite_to_header.py  train_cnn.py  train_qat.py  (+1 more)
visualization/: API_InfluxDB.txt  bridge.py  dashboard.py  docker-compose.yml
(+16 files in other folders)
