idf_component_register(
    SRCS
        "fall_sensor.cpp"
        "main.cpp"
        "inference.cpp"
        "wifi_stream.cpp"
    INCLUDE_DIRS
        "."
    REQUIRES
        esp-tflite-micro
        DFRobot_BMI160_wrapper
        driver
        freertos
        esp_timer
        esp_wifi
        nvs_flash
        lwip
)